# show_off

./: .gitignore  CLAUDE.md  Prompts Show Off.txt  README.md  TODO.md  config.yml  env  frontend.ts
.claude/: blackbox_mcp_plan.md  settings.local.json
.github/workflows/: show-off-action.yml
backend/: .dockerignore  .env.example  Dockerfile  REPHRASE_ENDPOINT_DOCS.md  config.yml  executor.py  fastagent.config.yaml  llm_agent.py  main.py  prompts.yml  pyproject.toml  run_agent.py  test_rephrase_endpoint.py
backend/mongodb/: AsyncMongoDBConnector.py  content.py  mongodb.py
backend/servers/bbai_mcp_server/: README.md  pyproject.toml
backend/servers/bbai_mcp_server/blackbox_mcp_server/: blackbox_client.py  server.py
backend/servers/bluesky-mcp-python/: README.md  bluesky_api.py  server.py  update_config.txt
backend/servers/linkedin-mcp/: pyproject.toml
backend/servers/linkedin_mcp/: LICENSE
backend/servers/linkedin_mcp/linkedin_mcp/: auth.py  post.py  server.py  settings.py
backend/servers/twitter-mcp-python/: README.md  requirements.txt  server.py  twitter_api.py  update_config.txt
bbai_mcp_client/: .env.example  README.md  TODO.md  generate_content.py  pyproject.toml  test_generate_content.py  test_mongo.py
bbai_mcp_server/blackbox_mcp_server/: config.py  tools.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  App_new.tsx  vite-env.d.ts
frontend/src/components/: Header.tsx  PostCard.tsx  Sidebar.tsx
frontend/src/hooks/: useNotification.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts  shared.ts
frontend/src/utils/: api.ts  (+5 more)
ts_servers_for_reference/bsky_mcp_server/: README.md  package.json
(+1 files in other folders)
