[project]
name = "blackbox-mcp-server"
version = "0.1.0"
description = "MCP server providing access to Blackbox AI API"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
blackbox-mcp-server = "blackbox_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
